--- a/country/src/app/component/common/drop-down/drop-down.component.html
+++ b/country/src/app/component/common/drop-down/drop-down.component.html
@@ -1,3 +1,4 @@
-<p-dropdown [options]='options' optionalLabel='optionalLabel' [placeholder]='placeholder' (onChange)='onChange'>
+<p-dropdown [options]='options' optionalLabel='optionalLabel' [placeholder]='placeholder'
+    (onChange)='onChangeEvent($event)'>
 
 </p-dropdown>
