--- a/country/src/app/component/regions/regions.component.html
+++ b/country/src/app/component/regions/regions.component.html
@@ -1,1 +1,2 @@
-<drop-down [options]='regions' optionLabel='label' placeholder='Choose a region' (onchange)='onchange()'></drop-down>
+<drop-down [options]='regions' optionLabel='label' placeholder='Choose a region' (onChange)='onChange($event)'>
+</drop-down>
