unwanted components removed

--- a/country/src/app/component/regions/regions.component.html
+++ b/country/src/app/component/regions/regions.component.html
@@ -1,2 +1,3 @@
-<drop-down [options]='regions' optionLabel='label' placeholder='Choose a region' (onChange)='onChange($event)'>
-</drop-down>
+<p-dropdown [options]='options' [optionLabel]='optionLabel' [placeholder]='placeholder'
+    (onChange)='onChangeEvent($event)'>
+</p-dropdown>
