--- a/country/src/app/component/home/home/home.component.html
+++ b/country/src/app/component/home/home/home.component.html
@@ -1,1 +1,35 @@
-<regions></regions>
+<form name="homeForm">
+    <h3>Countries App</h3>
+    <hr />
+    <br />
+
+    <div class="container-fluid">
+
+        <div class='row'>
+            <div class="col-2">
+                <label>Region</label>
+            </div>
+
+            <div class="col-10">
+                <regions [options]='regions' optionLabel='label' placeholder='Choose a region'
+                    (onChange)='regionOnChange($event)'>
+                </regions>
+            </div>
+        </div>
+        <br />
+
+        <div class='row' *ngIf="selectedRegion">
+            <div class="col-2">
+                <label>Country</label>
+            </div>
+
+            <div class="col-10">
+                <regions [options]='countries' optionLabel='name' placeholder='Choose a country'
+                    (onChange)='countryOnChange($event)'>
+                </regions>
+            </div>
+        </div>
+
+
+    </div>
+</form>
