--- a/country/src/app/component/regions/regions.component.html
+++ b/country/src/app/component/regions/regions.component.html
@@ -1,3 +1,10 @@
-<p-dropdown [options]='options' [optionLabel]='optionLabel' [placeholder]='placeholder'
-    (onChange)='onChangeEvent($event)'>
-</p-dropdown>
+<div class="row">
+    <div class="col-2">
+        <label>{{label}}</label>
+    </div>
+    <div class="col-10">
+        <p-dropdown [options]='options' [optionLabel]='optionLabel' [placeholder]='placeholder'
+            (onChange)='onChangeEvent($event)'>
+        </p-dropdown>
+    </div>
+</div>
