unit test case added and fixed

--- a/country/src/app/component/country-details/country-details.component.html
+++ b/country/src/app/component/country-details/country-details.component.html
@@ -2,7 +2,7 @@
     <div class="col-2">
         <label>Name</label>
     </div>
-    <div class="col-10">
+    <div class="col-10" id='name'>
         {{country.name}}
     </div>
 </div>
@@ -12,7 +12,7 @@
     <div class="col-2">
         <label>Capital</label>
     </div>
-    <div class="col-10">
+    <div class="col-10" id='capital'>
         {{country.capital}}
     </div>
 </div>
@@ -22,7 +22,7 @@
     <div class="col-2">
         <label>Population</label>
     </div>
-    <div class="col-10">
+    <div class="col-10" id='population'>
         {{country.population}}
     </div>
 </div>
